--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.6",
     "@react-navigation/bottom-tabs": "^5.0.0",
+    "@react-navigation/drawer": "^5.0.0",
+    "@react-navigation/native": "^5.0.0",
     "expo": "~36.0.0",
     "expo-font": "~8.0.0",
     "native-base": "^2.13.8",
