--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@react-navigation/native": "^5.0.0",
     "expo": "~36.0.0",
     "expo-font": "~8.0.0",
+    "expo-location": "~8.0.0",
     "expo-permissions": "~8.0.0",
+    "expo-task-manager": "~8.0.0",
     "native-base": "^2.13.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "^0.61.5",
     "react-native-calendars": "^1.261.0",
     "react-native-gesture-handler": "^1.5.6",
+    "react-native-maps": "0.26.1",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-safe-area-view": "^1.0.0",
